# angel_system

./: .dockerignore  .gitignore  .gitmodules  .mypy.ini  LICENSE.txt  README.md  TRAIN_AND_RUN_README.md  angel-docker-build.sh  angel-docker-pull.sh  angel-docker-push.sh  angel-provision-files.sh  angel-workspace-shell.sh  pyproject.toml  q  uncrustify.cfg
angel_system/: README.md  (+2 more)
ros/angel_debug/: CMakeLists.txt  README.md  package.xml
ros/angel_debug/angel_debug/nodes/: overlay_object_detections.cxx  simple_2d_detection_overlay.cxx
ros/angel_debug/launch/: debug_offline_object_detection.yaml  offline_debug_demo.py  online_debug_demo.py
ros/angel_msgs/: CMakeLists.txt  package.xml
ros/angel_msgs/msg/: ActivityDetection.msg  AnnotationEvent.msg  AruiObject3d.msg  AruiUpdate.msg  AruiUserNotification.msg  DialogueUtterance.msg  EyeGazeData.msg  HandJointPose.msg  HandJointPosesUpdate.msg  HeadsetAudioData.msg  HeadsetPoseData.msg  ImageMetadata.msg  IntentDetection.msg  InterpretedAudioUserEmotion.msg  InterpretedAudioUserIntent.msg  JointKeypoints.msg  ObjectDetection.msg  ObjectDetection2d.msg  ObjectDetection2dSet.msg  ObjectDetection3dSet.msg  SpatialMesh.msg  SpatialMeshes.msg  SystemCommands.msg  SystemTextResponse.msg  TaskGraph.msg  TaskItem.msg  TaskNode.msg  TaskUpdate.msg  Utterance.msg  VisionBoundingBox3d.msg
ros/angel_msgs/srv/: QueryActivityLabels.srv  QueryAllObjects3d.srv  QueryImageSize.srv  QueryTaskGraph.srv
ros/angel_system_nodes/: package.xml  setup.cfg  setup.py
ros/angel_system_nodes/angel_system_nodes/: activity_classifier_tcn.py  activity_detector.py  activity_from_obj_dets_classifier.py  annotation_event_monitor.py  asr.py  audio_player.py  audio_subscriber.py  base_dialogue_system_node.py  base_emotion_detector.py  base_intent_detector.py  berkeley_activity_detector.py  berkeley_object_detector.py  berkeley_task_monitor.py  convert_2d_dets_to_3d_dets.py  dummy_multi_task_monitor.py  emotion_detector.py  feedback_generator.py  generate_images.py  gpt_emotion_detector.py  gpt_intent_detector.py  hand_pose_converter.py  hl2ss_ros_bridge.py  hl2ss_video.py  hmm.py  image_timestamp_relay.py  intent_detector.py  intent_to_command.py  latency_tracker.py  mm_activity_detector.py  object_descriptor_generator.py  object_detector.py  object_detector_with_descriptors.py  object_detector_with_descriptors_v2.py  object_detector_with_descriptors_v3.py  publisher_member_function.py  question_answerer.py  redis_ros_bridge.py  ros_publisher.py  spatial_mapper.py  task_monitor.py  (+7 more)
ros/angel_system_nodes/angel_system_nodes/activity_classification/: activity_classifier_tcn.py  mm_activity_detector.py  uho_activity_detector.py
ros/angel_system_nodes/angel_system_nodes/audio/: asr.py  audio_player.py  dialogue.py  dialogue_development.py  dialogue_utterance_processing.py  question_answerer.py  voice_activity_detector.py
ros/angel_system_nodes/angel_system_nodes/audio/emotion/: base_emotion_detector.py  gpt_emotion_detector.py
ros/angel_system_nodes/angel_system_nodes/data_publishers/: generate_images.py  hl2ss_ros_bridge.py  image_metadata_relay.py  image_timestamp_relay.py  redis_ros_bridge.py  ros_publisher.py
ros/angel_system_nodes/angel_system_nodes/eval/: eval_2_logger.py  mitll_eval_2_logger.py
ros/angel_system_nodes/angel_system_nodes/latency_tracker/: latency_tracker.py
ros/angel_system_nodes/angel_system_nodes/object_detection/: object_and_hand_detection.py  object_detection_filter.py  object_detector_with_descriptors_v2.py  object_detector_with_descriptors_v3.py  object_hand_detection.py  yolov7_object_detector.py
ros/angel_system_nodes/angel_system_nodes/pose_estimation/: pose_estimator.py
ros/angel_system_nodes/angel_system_nodes/task_monitoring/: dummy_multi_task_monitor.py  global_step_predictor.py  keyboard_to_sys_cmd.py  task_monitor_v1.py  transform_update_lod.py
ros/angel_system_nodes/configs/: default_activity_det_config.json  default_object_det_config.json  mit_ll_eval_one_coffee_recipe_steps.json  mit_ll_eval_one_coffee_recipe_steps_v2.json  mit_ll_eval_one_coffee_recipe_thresholds.json  mit_ll_eval_one_coffee_recipe_thresholds_v2.json  mit_ll_eval_one_quesadilla_recipe_steps.json  swinb_activity_det_config.json  two_stage_activity_det_config.json
ros/angel_system_nodes/configs/llm_prompts/: vis_qa_prompt  vis_qa_teacher_prompt
ros/angel_utils/: CMakeLists.txt  package.xml
ros/angel_utils/demo_ui/: index.js  main.html  package-lock.json  package.json
ros/angel_utils/demo_ui/launch/: demo_ui_launch.xml  websocket.launch
ros/angel_utils/demo_ui/src/: activity_conf.js  connection_status.js  hl_image.js  task_list.js
ros/angel_utils/demo_ui/stylesheets/: layout.styl  variables.scss
ros/angel_utils/include/angel_utils/: rate_tracker.hpp
ros/angel_utils/multi_task_demo_ui/: main.html  package-lock.json  package.json
ros/angel_utils/nodes/: simple_2d_detection_overlay.cxx
ros/angel_utils/python/: CMakeLists.txt
ros/angel_utils/python/angel_utils/: __init__.py  activity_classification.py  bag_extractor.py  conversion.py  hand.py  node_config.py  object_detection.py  rate_tracker.py  sync_msgs.py  system_commands.py
ros/angel_utils/scripts/: bag_extractor.py  bag_extractor.sh  convert_video_to_ros_bag.py  sync_bag_node.py
ros/angel_utils/src/: rate_tracker.cpp
ros/bbn_integration/: CMakeLists.txt  example_output_seq_1.yml  example_output_seq_2.yml  example_output_seq_3.yml  package.xml
ros/bbn_integration/example_files/: README.md  example_output.yml  example_output_seq_2.yml  example_output_seq_3.yml
ros/bbn_integration/include/bbn_integration/: ros_to_yaml.h
ros/bbn_integration/src/: ros_to_yaml.cxx
ros/bbn_integration/src/nodes/: zmq_integration_client.cxx
ros/bbn_integration_py/: package.xml  setup.cfg  setup.py
ros/bbn_integration_py/bbn_integration_py/nodes/: task_to_bbn_update.py
ros/cpp/src/ptg_datahub/: CMakeLists.txt  package.xml
ros/ptg_datahub/: CMakeLists.txt
ros/ptg_datahub/image_converter/: package.xml
ros/ptg_datahub/src/: image_converter.cpp  ptg_datahub.cpp
(+1847 files in other folders)
