[build-system]
requires = ["poetry-core==1.0.8"]
build-backend = "poetry.core.masonry.api"

###############################################################################

[tool.poetry]
name = "angel_system"
version = "0.1.0"
description = ""
authors = ["Kitware, Inc. <kitware@kitware.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.10"
easydict = "^1.9"
einops = "^0.4.1"
hmmlearn = ">=0.2.8"
matplotlib = "^3.5.1"
numpy = "^1.22.2"
openpyxl = "^3.0.10"
pandas = "^1.4.3"
Pillow = "^8"
pyarrow = "^9.0.0"  # for feature file support
pynput = "^1.7.6"
pytorchvideo = "^0.1.5"
scikit-learn = "^1.1.2"
simpleaudio = "^1.0.4"
smqtk-detection = ">=0.19.0"
timm = "^0.5.4"
torch = "^1.10.2"
torchvision = "^0.11.3"
transitions = "^0.8.11"
trimesh = {extras = ["all"], version = "^3.10.2"}
# For UHO Activity Classifier
# - see arisia: /data/dawei.du/ptg-activity-recognition/activity_hydra/requirements.txt
hydra-core = "^1.2.0"
python-dotenv = "^0.21.0"
pytorch-lightning = "^1.7.7"
# Pinning setup tools to this known version due to torch 1.10.2 tensorboard
# functionality assuming `distutils.version.LooseVersion` functionality.
setuptools = "59.5.0"

[tool.poetry.dev-dependencies]
ipython = "^8.0.1"
# Docs
Sphinx = "*"
sphinx-rtd-theme = "*"
sphinx-prompt = "*"
livereload = "*"

[tool.poetry.scripts]
# Evaluation
ptg_eval_activity = "angel_system.ptg_eval.activity_classification.evaluate_activity:main"
ptg_eval_step = "angel_system.ptg_eval.step_completion.evaluate_step:main"

[tool.poetry.plugins."smqtk_plugins"]
# Activity detector
"angel_system.impls.detect_activities.pytorchvideo_slow_fast_r50" = "angel_system.impls.detect_activities.pytorchvideo_slow_fast_r50"
"angel_system.impls.detect_activities.swinb.swinb_detect_activities" = "angel_system.impls.detect_activities.swinb.swinb_detect_activities"
"angel_system.impls.detect_activities.two_stage.two_stage_detect_activities" = "angel_system.impls.detect_activities.two_stage.two_stage_detect_activities"
