<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bbn_integration_py</name>
  <version>0.1.0</version>
  <description>ROS2 nodes in python for BBN integration support</description>
  <maintainer email="paul.tunison@kitware.com">Paul Tunison</maintainer>
  <license>BSD 3-Clause</license>

  <depend>bbn_integration_msgs</depend>
  <depend>angel_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
